solved overflow issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   box-sizing: border-box;
 }
 
